Fix spacing in About component

--- a/client/src/styles/css/index.css
+++ b/client/src/styles/css/index.css
@@ -6854,6 +6854,11 @@ a {
   margin-top: 2em;
   padding: 1em 5em; }
 
+.CloudAboutHeader {
+  margin-top: 1em !important;
+  padding: 1em !important;
+  width: 60%; }
+
 .UserCloudBubble {
   display: flex;
   flex-direction: column;
@@ -6895,6 +6900,11 @@ a {
   margin-bottom: 10em;
   max-width: 65%;
   min-width: 50%; }
+
+.AboutContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center; }
 
 .PostsContainer {
   min-width: 50%; }
