--- a/client/src/styles/scss/components/_Containers.scss
+++ b/client/src/styles/scss/components/_Containers.scss
@@ -6,6 +6,11 @@
   min-width: 50%;
 }
 
+.AboutContainer {
+  @include col();
+  align-items: center;
+}
+
 .PostsContainer {
   min-width: 50%;
 }
